; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/extr_font_driver.c_font_driver_init_first.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/extr_font_driver.c_font_driver_init_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float, i8*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_3__* @font_driver_init_first(i8* %0, i8* %1, float %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store float %2, float* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i8* null, i8** %14, align 8
  store i8* null, i8** %15, align 8
  store i32 0, i32* %16, align 4
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load float, float* %10, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* %12, align 4
  %23 = call i32 @font_init_first(i8** %14, i8** %15, i8* %18, i8* %19, float %20, i32 %21, i32 %22)
  store i32 %23, i32* %16, align 4
  %24 = load i32, i32* %16, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %40

26:                                               ; preds = %6
  %27 = call i64 @calloc(i32 1, i32 24)
  %28 = inttoptr i64 %27 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %17, align 8
  %29 = load i8*, i8** %14, align 8
  %30 = bitcast i8* %29 to i32*
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 2
  store i32* %30, i32** %32, align 8
  %33 = load i8*, i8** %15, align 8
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  %36 = load float, float* %10, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  store float %36, float* %38, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  store %struct.TYPE_3__* %39, %struct.TYPE_3__** %7, align 8
  br label %41

40:                                               ; preds = %6
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %7, align 8
  br label %41

41:                                               ; preds = %40, %26
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  ret %struct.TYPE_3__* %42
}

declare dso_local i32 @font_init_first(i8**, i8**, i8*, i8*, float, i32, i32) #1

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
